--- a/VidRen/Views/Movies/MovieForm.cshtml
+++ b/VidRen/Views/Movies/MovieForm.cshtml
@@ -30,6 +30,7 @@
         @Html.ValidationMessageFor(m => m.Movie.NumberInStock)
    </div>
     @Html.HiddenFor(m => m.Movie.Id)
+    @Html.AntiForgeryToken()
     <button type="submit" class="btn btn-primary">Save</button>
 }
 
